Added OAuth. Cleaned up code a bit, removed extra user in url for user routes. Removed unused files.
